Remove async invocation support for http client (#430)